# infall

./: .gitignore  LICENSE  README.md  jest.config.js  jest.config.ts  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
__mocks__/: infall-wasm.ts
app/: globals.css  layout.tsx  page.tsx
app/components/: Controls.tsx  HUD.tsx  HelpIcon.tsx  SimCanvas.tsx
hooks/: useSim.ts  useWasm.ts
hooks/__tests__/: useSim.test.ts  useWasm.test.ts
lib/: coordinates.ts  wasm-types.ts
lib/__tests__/: coordinates.test.ts
public/wasm-pkg/: infall_wasm.d.ts  infall_wasm.js  infall_wasm_bg.wasm  infall_wasm_bg.wasm.d.ts  package.json
shaders/: disk.ts  lensing.ts
shaders/__tests__/: disk.test.ts  lensing.test.ts
wasm/: Cargo.toml
wasm-pkg/: infall_wasm.d.ts  infall_wasm.js  infall_wasm_bg.js  infall_wasm_bg.wasm  infall_wasm_bg.wasm.d.ts  package.json
wasm/src/: geodesic.rs  kerr.rs  lib.rs  types.rs
