[package]
name = "infall-wasm"
version = "0.1.0"
edition = "2021"
description = "Kerr black hole geodesic integrator compiled to WASM"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"

[dev-dependencies]
approx = "0.5"

[profile.release]
opt-level = 3
lto = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O4"]
